--- a/elastic-query-service/pom.xml
+++ b/elastic-query-service/pom.xml
@@ -49,6 +49,10 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.testcontainers</groupId>
