--- a/elastic-query-service/src/test/resources/application.yml
+++ b/elastic-query-service/src/test/resources/application.yml
@@ -21,3 +21,10 @@ user-config:
   roles:
     - USER
 
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+security:
+  paths-to-ignore: /api-docs
