--- a/config-server-repository/elastic-query-web-client.yml
+++ b/config-server-repository/elastic-query-web-client.yml
@@ -21,6 +21,11 @@ elastic-query-web-client:
     content-type: 'application/vnd.api.v1+json'
     accept-type: 'application/vnd.api.v1+json'
     base-url: 'http://elastic-query-service/elastic-query-service/documents'
+  queries:
+    query-by-text:
+      method: POST
+      uri: '/get-document-by-text'
+      accept: ${elastic-query-web-client.webclient.accept-type}
 
 ---
 spring:
