--- a/config-server-repository/elastic-query-web-client.yml
+++ b/config-server-repository/elastic-query-web-client.yml
@@ -21,6 +21,16 @@ elastic-query-web-client:
     content-type: 'application/vnd.api.v1+json'
     accept-type: 'application/vnd.api.v1+json'
     base-url: 'http://elastic-query-service/elastic-query-service/documents'
+    service-id: elastic-query-service
+    instances:
+      -
+        id: elastic-query-service-1
+        host: localhost
+        port: 8093
+      -
+        id: elastic-query-service-2
+        host: localhost
+        port: 8095
   queries:
     query-by-text:
       method: POST
