--- a/reactive-elastic-query-service/pom.xml
+++ b/reactive-elastic-query-service/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
