--- a/elastic-query-service/pom.xml
+++ b/elastic-query-service/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>elastic-query-client</artifactId>
         </dependency>
         <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>elastic-query-service-common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
