--- a/reactive-elastic-query-service/pom.xml
+++ b/reactive-elastic-query-service/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>elastic-model</artifactId>
         </dependency>
         <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>elastic-query-service-common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
