--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <module>elastic-query-web-client</module>
         <module>reactive-elastic-query-service</module>
         <module>elastic-query-service-common</module>
+        <module>reactive-elastic-query-web-client</module>
     </modules>
 
     <dependencyManagement>
