--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <module>reactive-elastic-query-service</module>
         <module>elastic-query-service-common</module>
         <module>reactive-elastic-query-web-client</module>
+        <module>elastic-query-web-client-common</module>
     </modules>
 
     <dependencyManagement>
@@ -105,6 +106,11 @@
             <dependency>
                 <groupId>net.shyshkin.study.microservices</groupId>
                 <artifactId>elastic-query-service-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.shyshkin.study.microservices</groupId>
+                <artifactId>elastic-query-web-client-common</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
