--- a/elastic-query-web-client/pom.xml
+++ b/elastic-query-web-client/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>app-config-data</artifactId>
         </dependency>
         <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>elastic-query-web-client-common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
