--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,5 +1,5 @@
 COMPOSE_PATH_SEPARATOR=:
-COMPOSE_FILE=common.yml:kafka_cluster.yml:elastic_cluster.yml:keycloak_auth_server.yml:services.yml:keycloak_auth_server-export.yml:
+COMPOSE_FILE=common.yml:kafka_cluster.yml:elastic_cluster.yml:keycloak_auth_server.yml:services.yml
 KAFKA_VERSION=5.0.4
 ELASTIC_VERSION=7.17.3
 SERVICE_VERSION=0.0.1-SNAPSHOT
