--- a/elastic-query-service/pom.xml
+++ b/elastic-query-service/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.dasniko</groupId>
+            <artifactId>testcontainers-keycloak</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
