--- a/elastic-query-service/src/test/resources/application.yml
+++ b/elastic-query-service/src/test/resources/application.yml
@@ -1,5 +1,13 @@
 elastic-query-service:
   version: v1
+  custom-audience: elastic-query-service
+
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8081/realms/gelenler-tutorial
 
 server:
   servlet:
