--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <testcontainers.version>1.17.3</testcontainers.version>
         <springdoc-openapi-ui.version>1.6.9</springdoc-openapi-ui.version>
         <awaitility.version>4.2.0</awaitility.version>
+        <testcontainers-keycloak.version>2.3.0</testcontainers-keycloak.version>
     </properties>
 
     <modules>
@@ -144,6 +145,12 @@
                 <version>${testcontainers.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.github.dasniko</groupId>
+                <artifactId>testcontainers-keycloak</artifactId>
+                <version>${testcontainers-keycloak.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.awaitility</groupId>
