--- a/docker-compose/keycloak_auth_server-import.yml
+++ b/docker-compose/keycloak_auth_server-import.yml
@@ -13,6 +13,8 @@ services:
       POSTGRES_DB: keycloak
       POSTGRES_USER: keycloak
       POSTGRES_PASSWORD: password
+    ports:
+      - "25432:5432"
     networks:
       - ${GLOBAL_NETWORK:-elastic}
 
