--- a/elastic-query-service/src/test/resources/application.yml
+++ b/elastic-query-service/src/test/resources/application.yml
@@ -8,6 +8,11 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8181/realms/gelenler-tutorial
+  sql:
+    init:
+      schema-locations: classpath:init-schema-simplified.sql
+      data-locations: classpath:init-data-simplified.sql
+      mode: always
 
 server:
   servlet:
