--- a/elastic-query-web-client/src/main/resources/application.yml
+++ b/elastic-query-web-client/src/main/resources/application.yml
@@ -2,6 +2,7 @@ server.port: 8094
 
 app.redirect.host.uri: http://localhost:${server.port}
 app.oauth.baseUri: http://localhost:8181
+app.security.default-client-registration-id: keycloak
 
 spring:
   application:
