--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <springdoc-openapi-ui.version>1.6.9</springdoc-openapi-ui.version>
         <awaitility.version>4.2.0</awaitility.version>
         <testcontainers-keycloak.version>2.3.0</testcontainers-keycloak.version>
+        <docker-maven-plugin.version>0.40.2</docker-maven-plugin.version>
     </properties>
 
     <modules>
@@ -343,7 +344,7 @@
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
-                <version>0.33.0</version>
+                <version>${docker-maven-plugin.version}</version>
                 <configuration>
                     <verbose>true</verbose>
                     <containerNamePattern>%a</containerNamePattern>
