--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,12 +5,12 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, mac-fabric8-conflict, java-versions ]
   pull_request:
     branches: [ main ]
 
 jobs:
-  build:
+  build-java11:
 
     runs-on: ubuntu-latest
 
@@ -24,3 +24,18 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B verify --file pom.xml
+
+  build-java17:
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B verify --file pom.xml
