--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-java11:
+  build-java11-linux:
 
     runs-on: ubuntu-latest
 
@@ -25,9 +25,24 @@ jobs:
     - name: Build with Maven
       run: mvn -B verify --file pom.xml
 
-  build-java17:
+  build-java17-linux:
 
     runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B verify --file pom.xml
+
+  build-java17-mac:
+
+    runs-on: macos-latest
 
     steps:
       - uses: actions/checkout@v3
