--- a/.github/workflows/ubuntu-java17.yml
+++ b/.github/workflows/ubuntu-java17.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Print Docker version
+        run: docker --version
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
