--- a/.github/workflows/mac-java17.yml
+++ b/.github/workflows/mac-java17.yml
@@ -16,6 +16,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Install docker # Taken from https://github.com/actions/virtual-environments/issues/1143#issuecomment-652264388
+        run: |
+          mkdir -p ~/.docker/machine/cache
+          curl -Lo ~/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v19.03.12/boot2docker.iso
+          brew install docker docker-machine
+          docker-machine create --driver virtualbox default
+          docker-machine env default
       - name: Print Docker version
         run: docker --version
       - name: Set up JDK 17
