--- a/.github/workflows/mac-java17.yml
+++ b/.github/workflows/mac-java17.yml
@@ -16,13 +16,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Install docker # Taken from https://github.com/actions/virtual-environments/issues/1143#issuecomment-652264388
-        run: |
-          HOMEBREW_NO_AUTO_UPDATE=1 brew install --cask docker
-          sudo /Applications/Docker.app/Contents/MacOS/Docker --unattended --install-privileged-components
-          open -a /Applications/Docker.app --args --unattended --accept-license
-          echo "We are waiting for Docker to be up and running. It can take over 2 minutes..."
-          while ! /Applications/Docker.app/Contents/Resources/bin/docker info &>/dev/null; do sleep 1; done
+      - uses: docker-practice/actions-setup-docker@master
+      - run: set -x
       - name: Print Docker version
         run: docker --version
       - name: Set up JDK 17
