--- a/.github/workflows/ubuntu-java11.yml
+++ b/.github/workflows/ubuntu-java11.yml
@@ -5,7 +5,7 @@ name: Tested on JVM 11 (Ubuntu)
 
 on:
   push:
-    branches: [ main, mac-fabric8-conflict, java-versions ]
+    branches: [ main, mac-fabric8-conflict, docker-caching ]
   pull_request:
     branches: [ main ]
 
@@ -15,15 +15,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Print Docker version
-      run: docker --version
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
+      - uses: actions/checkout@v3
+      - name: Print Docker version
+        run: docker --version
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+      - name: Cache Docker images.
+        uses: ScribeMD/docker-cache@0.2.2
+        with:
+          key: docker-${{ runner.os }}-${{ hashFiles( docker-compose/.env ) }}
 
 #    - name: Cache local Maven repository
 #      uses: actions/cache@v3
@@ -33,5 +37,5 @@ jobs:
 #        restore-keys: |
 #          ${{ runner.os }}-maven-
 
-    - name: Build with Maven
-      run: mvn -B verify --file pom.xml
+      - name: Build with Maven
+        run: mvn -B verify --file pom.xml
