--- a/.github/workflows/mac-java17.yml
+++ b/.github/workflows/mac-java17.yml
@@ -5,7 +5,7 @@ name: Tested on JVM 17 (MacOS)
 
 on:
   push:
-    branches: [ main, mac-fabric8-conflict, docker-caching ]
+    branches: [ main, mac-fabric8-conflict, docker-caching, github-env-file ]
   pull_request:
     branches: [ main ]
 
@@ -16,6 +16,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Load .env file
+        uses: xom9ikk/dotenv@v1.0.2
+        with:
+          path: docker-compose/.env
       - uses: docker-practice/actions-setup-docker@master
       - run: set -x
       - name: Print Docker version
@@ -45,10 +49,10 @@ jobs:
       - if: steps.image-cache.outputs.cache-hit != 'true'
         name: Pull docker images
         run: |
-          docker pull docker.elastic.co/elasticsearch/elasticsearch:7.17.3
-          docker save -o ~/image-cache/elasticsearch.tar docker.elastic.co/elasticsearch/elasticsearch:7.17.3
-          docker pull quay.io/keycloak/keycloak:19.0.1
-          docker save -o ~/image-cache/keycloak.tar quay.io/keycloak/keycloak:19.0.1
+          docker pull docker.elastic.co/elasticsearch/elasticsearch:${{ env.ELASTIC_VERSION }}
+          docker save -o ~/image-cache/elasticsearch.tar docker.elastic.co/elasticsearch/elasticsearch:${{ env.ELASTIC_VERSION }}
+          docker pull quay.io/keycloak/keycloak:$KEYCLOAK_VERSION
+          docker save -o ~/image-cache/keycloak.tar quay.io/keycloak/keycloak:$KEYCLOAK_VERSION
 
       - if: steps.image-cache.outputs.cache-hit == 'true'
         name: Restore docker images from cache
