--- a/.github/workflows/ubuntu-java11.yml
+++ b/.github/workflows/ubuntu-java11.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Load .env file
         uses: xom9ikk/dotenv@v1.0.2
         with:
-          path: docker-compose/.env
+          path: docker-compose/
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
