--- a/.github/workflows/ubuntu-java11.yml
+++ b/.github/workflows/ubuntu-java11.yml
@@ -5,7 +5,7 @@ name: Tested on JVM 11 (Ubuntu)
 
 on:
   push:
-    branches: [ main, mac-fabric8-conflict, docker-caching ]
+    branches: [ main, mac-fabric8-conflict, docker-caching, github-env-file ]
   pull_request:
     branches: [ main ]
 
@@ -18,6 +18,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Print Docker version
         run: docker --version
+      - name: Load .env file
+        uses: xom9ikk/dotenv@v1.0.2
+        with:
+          path: docker-compose/
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -39,10 +43,10 @@ jobs:
       - if: steps.image-cache.outputs.cache-hit != 'true'
         name: Pull docker images
         run: |
-          docker pull docker.elastic.co/elasticsearch/elasticsearch:7.17.3
-          docker save -o ~/image-cache/elasticsearch.tar docker.elastic.co/elasticsearch/elasticsearch:7.17.3
-          docker pull quay.io/keycloak/keycloak:19.0.1
-          docker save -o ~/image-cache/keycloak.tar quay.io/keycloak/keycloak:19.0.1
+          docker pull docker.elastic.co/elasticsearch/elasticsearch:${{ env.ELASTIC_VERSION }}
+          docker save -o ~/image-cache/elasticsearch.tar docker.elastic.co/elasticsearch/elasticsearch:${{ env.ELASTIC_VERSION }}
+          docker pull quay.io/keycloak/keycloak:$KEYCLOAK_VERSION
+          docker save -o ~/image-cache/keycloak.tar quay.io/keycloak/keycloak:$KEYCLOAK_VERSION
 
       - if: steps.image-cache.outputs.cache-hit == 'true'
         name: Restore docker images from cache
