--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
         <module>elastic-query-service-common</module>
         <module>reactive-elastic-query-web-client</module>
         <module>elastic-query-web-client-common</module>
+        <module>elastic-query-web-client-2</module>
     </modules>
 
     <dependencyManagement>
