--- a/.github/workflows/ubuntu-java17.yml
+++ b/.github/workflows/ubuntu-java17.yml
@@ -5,7 +5,7 @@ name: Tested on JVM 17 (Ubuntu)
 
 on:
   push:
-    branches: [ main, testing-web-client ]
+    branches: [ main, sso-testing ]
   pull_request:
     branches: [ main ]
 
@@ -18,6 +18,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Print Docker version
         run: docker --version
+      - name: Add domain host.testcontainers.internal
+        run: |
+          echo '127.0.0.1 host.testcontainers.internal' | sudo tee -a /etc/hosts
+          cat /etc/hosts
       - name: Load .env file
         uses: xom9ikk/dotenv@v1.0.2
         with:
@@ -61,5 +65,9 @@ jobs:
 #          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
 #          restore-keys: |
 #            ${{ runner.os }}-maven-
+
+      - name: Install with Maven without testing
+        run: mvn -B clean install -DskipTests --file pom.xml
+
       - name: Build with Maven
         run: mvn -B verify --file pom.xml
