--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -7,3 +7,4 @@ SERVICE_VERSION=0.0.1-SNAPSHOT
 POSTGRES_VERSION=14.4
 GLOBAL_NETWORK=application
 GROUP_ID=artarkatesoft
+# When change version you must duplicate them into env-versions.yaml for correct badges
