--- a/.github/workflows/ubuntu-java17.yml
+++ b/.github/workflows/ubuntu-java17.yml
@@ -5,7 +5,7 @@ name: Tested on JVM 17 (Ubuntu)
 
 on:
   push:
-    branches: [ main, sso-testing ]
+    branches: [ main, reuse-container ]
   pull_request:
     branches: [ main ]
 
@@ -22,6 +22,10 @@ jobs:
         run: |
           echo '127.0.0.1 host.testcontainers.internal' | sudo tee -a /etc/hosts
           cat /etc/hosts
+      - name: Enable reuse containers in testcontainers tests
+        run: |
+          echo 'testcontainers.reuse.enable=true' | sudo tee -a $HOME/.testcontainers.properties
+          cat $HOME/.testcontainers.properties
       - name: Load .env file
         uses: xom9ikk/dotenv@v1.0.2
         with:
