--- a/elastic-query-service/pom.xml
+++ b/elastic-query-service/pom.xml
@@ -99,6 +99,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>common-test</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
