--- a/elastic-query-web-client-2/pom.xml
+++ b/elastic-query-web-client-2/pom.xml
@@ -76,6 +76,12 @@
             <artifactId>htmlunit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>common-test</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
