--- a/reactive-elastic-query-service/pom.xml
+++ b/reactive-elastic-query-service/pom.xml
@@ -78,6 +78,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>net.shyshkin.study.microservices</groupId>
+            <artifactId>common-test</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
