--- a/.github/workflows/mac-java17.yml
+++ b/.github/workflows/mac-java17.yml
@@ -5,7 +5,7 @@ name: Tested on JVM 17 (MacOS)
 
 on:
   push:
-    branches: [ main, reuse-container ]
+    branches: [ main, common-test-module ]
   pull_request:
     branches: [ main ]
 
