--- a/.github/workflows/ubuntu-java11.yml
+++ b/.github/workflows/ubuntu-java11.yml
@@ -5,7 +5,7 @@ name: Tested on JVM 11 (Ubuntu)
 
 on:
   push:
-    branches: [ main, reuse-container ]
+    branches: [ main, common-test-module ]
   pull_request:
     branches: [ main ]
 
