--- a/docker-compose/elastic_cluster.yml
+++ b/docker-compose/elastic_cluster.yml
@@ -72,6 +72,8 @@ services:
 
   kibana:
     image: docker.elastic.co/kibana/kibana:${ELASTIC_VERSION}
+    profiles:
+      - debug
     ports: ["5601:5601"]
     restart: on-failure
     depends_on:
