--- a/config-server-repository/twitter-to-kafka-service.yml
+++ b/config-server-repository/twitter-to-kafka-service.yml
@@ -28,6 +28,7 @@ kafka-config:
   topic-name: twitter-topic
   topic-names-to-create:
     - twitter-topic
+    - twitter-analytics-topic
   number-of-partitions: 3
   replication-factor: 3
 
