--- a/twitter-to-kafka-service/src/test/resources/application.yml
+++ b/twitter-to-kafka-service/src/test/resources/application.yml
@@ -28,6 +28,7 @@ kafka-config:
   topic-name: twitter-topic
   topic-names-to-create:
     - twitter-topic
+    - twitter-analytics-topic
   number-of-partitions: 3
   replication-factor: 3
 
