--- a/config-server-repository/kafka-streams-service.yml
+++ b/config-server-repository/kafka-streams-service.yml
@@ -41,6 +41,6 @@ kafka-streams-config:
   application-id: kafka-streams-application
   input-topic-name: twitter-topic
   output-topic-name: twitter-analytics-topic
-  state-file-location: ${HOME}/kafka-streaming-state
+  state-file-location: ${user.home}/kafka-streaming-state
   word-count-store-name: word-count-store
 
