--- a/kafka-streams-service/src/test/resources/application.yml
+++ b/kafka-streams-service/src/test/resources/application.yml
@@ -46,7 +46,7 @@ kafka-streams-config:
   application-id: kafka-streams-application
   input-topic-name: twitter-topic
   output-topic-name: twitter-analytics-topic
-  state-file-location: ${HOME}/kafka-streaming-state
+  state-file-location: ${user.home}/kafka-streaming-state
   word-count-store-name: word-count-store
 
 
