Updated Kafka Version to 7.2.1

--- a/docker-compose/kafka_cluster.yml
+++ b/docker-compose/kafka_cluster.yml
@@ -29,6 +29,7 @@ services:
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
       SCHEMA_REGISTRY_LISTENERS: http://schema-registry:8081
       SCHEMA_REGISTRY_DEBUG: 'true'
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://kafka-broker-1:9092,PLAINTEXT://kafka-broker-2:9092,PLAINTEXT://kafka-broker-3:9092
     networks:
       - ${GLOBAL_NETWORK:-kafka}
   kafka-broker-1:
