--- a/kafka-streams-service/src/test/resources/application.yml
+++ b/kafka-streams-service/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: "@project.artifactId@"
+    name: kafka-streams-service
   cloud:
     config:
       enabled: false
