--- a/elastic-query-service/src/test/resources/application.yml
+++ b/elastic-query-service/src/test/resources/application.yml
@@ -1,13 +1,22 @@
 elastic-query-service:
   version: v1
   custom-audience: elastic-query-service
-
+app.oauth.baseUri: http://localhost:8181
 spring:
   security:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8181/realms/gelenler-tutorial
+          issuer-uri: ${app.oauth.baseUri}/realms/gelenler-tutorial
+      client:
+        registration:
+          keycloak:
+            client-id: elastic-query-service
+            client-secret: 'ev8wdPngiAmJTwIKlY94kBGC5Vxfluo7'
+            authorization-grant-type: client_credentials
+        provider:
+          keycloak:
+            issuer-uri: ${app.oauth.baseUri}/realms/gelenler-tutorial
   sql:
     init:
       schema-locations: classpath:init-schema-simplified.sql
