--- a/elastic-query-service/src/test/resources/application.yml
+++ b/elastic-query-service/src/test/resources/application.yml
@@ -1,6 +1,20 @@
 elastic-query-service:
   version: v1
   custom-audience: elastic-query-service
+  webclient:
+    connect-timeout-ms: 10000
+    read-timeout-ms: 10000
+    write-timeout-ms: 10000
+    max-in-memory-size: 10485760 #10MB
+    content-type: 'application/vnd.api.v1+json'
+    accept-type: 'application/vnd.api.v1+json'
+    base-url: 'http://kafka-streams-service/kafka-streams-service'
+    query-type: 'KAFKA_STATE_STORE'
+  queries:
+    get-word-count-by-word:
+      method: GET
+      uri: '/get-word-count-by-word/{word}'
+      accept: ${elastic-query-service.webclient.accept-type}
 app.oauth.baseUri: http://localhost:8181
 spring:
   security:
