--- a/docker-compose/env-versions.yaml
+++ b/docker-compose/env-versions.yaml
@@ -3,6 +3,7 @@ KEYCLOAK_VERSION: 19.0.1
 KAFKA_VERSION: 7.2.1
 SERVICE_VERSION: 0.0.1-SNAPSHOT
 POSTGRES_VERSION: 14.4
+MOCKSERVER_VERSION: 5.14.0
 GLOBAL_NETWORK: application
 GROUP_ID: artarkatesoft
 # When change version you must duplicate them into env-versions.yaml for correct badges
